[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/UI/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/UIButtonFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/UITheme/UITheme.tres" type="Theme" id=4]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 150
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
extra_spacing_char = 22
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 2 )

[node name="MainMenuPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="MainMenuPanel"]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.172
margin_bottom = 32.24
custom_fonts/font = SubResource( 2 )
text = "G E N O S"
align = 1
valign = 1

[node name="Title2" type="Label" parent="MainMenuPanel"]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.172
margin_top = 100.0
margin_bottom = 202.24
custom_fonts/font = SubResource( 3 )
text = "The rebellious bot"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="MainMenuPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -66.0
margin_right = 152.0
margin_bottom = -16.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Start"

[node name="ExitButton" type="Button" parent="MainMenuPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 11.0
margin_right = 150.0
margin_bottom = 61.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Exit"

[connection signal="pressed" from="MainMenuPanel/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenuPanel/ExitButton" to="." method="_on_ExitButton_pressed"]
